# CyberClaw

./: .gitignore  CYBERCLAW_COMPLETE_SUMMARY.md  CYBERCLAW_ENHANCEMENT_PLAN.md  CYBERCLAW_FULL_FEATURE_ROADMAP.md  CYBERCLAW_PROGRESS_GRAPH.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  final_system_test.py  install.cmd  install.py  install.sh  pyproject.toml  start_chat.cmd  start_dashboard.cmd  test_gap_features.py  test_hermes_powerups.py  test_multi_provider.py  test_operator_features.py  test_v020_complete.py  test_v020_features.py
.github/workflows/: publish.yml
docs/: app.js  channels-setup-guide.md  index.html  styles.css  tutorial.html
scripts/: cyberclaw-start-hidden.vbs  cyberclaw-start.cmd  install-startup-task.ps1  uninstall-startup-task.ps1
src/cyberclaw/channel/: __init__.py  access.py  base.py  discord_channel.py  irc_channel.py  matrix_channel.py  signal_channel.py  slack_channel.py  telegram_channel.py  webchat_channel.py  whatsapp_channel.py
src/cyberclaw/cli/: __init__.py  chat.py  main.py  model_selector.py  server.py  tui.py
src/cyberclaw/core/: agent.py  agent_loader.py  auto_reply.py  commitments.py  context.py  context_engine.py  context_guard.py  cron_loader.py  eventbus.py  history.py  history_sqlite.py  link_understanding.py  (+13 more)
tests/: test_error_handling.py  test_holographic_store.py  test_sandbox.py  test_tui_dashboard.py
workspace/: AGENTS.md  BOOTSTRAP.md  config.example.yaml  config.user.yaml  test_fallback.py  test_json_strict.py  test_mcp_load.py  test_smart_routing.py  test_supertonic_tts.py
(+83 files in other folders)
