[project]
name = "cyberclaw"
version = "0.2.0"
description = "CyberClaw personal AI assistant with tools, skills, channels, routing, memory, streaming, and plugins"
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "watchdog>=3.0.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
slack = ["slack-sdk[socket-mode]>=3.27.0"]
whatsapp = []  # Uses httpx (already a dependency)
matrix = ["matrix-nio>=0.24.0"]
voice = ["edge-tts>=6.1.0"]
voice-elevenlabs = ["edge-tts>=6.1.0"]
voice-deepgram = []
browser = ["playwright>=1.40.0"]
crawler = ["crawl4ai>=0.3.0"]
all = [
    "slack-sdk[socket-mode]>=3.27.0",
    "matrix-nio>=0.24.0",
    "edge-tts>=6.1.0",
    "playwright>=1.40.0",
    "crawl4ai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberclaw"]

[project.scripts]
cyberclaw = "cyberclaw.cli.main:app"
